<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F2EDA7">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="305dp"
        android:layout_height="567dp"
        android:background="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.725">

        <EditText
            android:id="@+id/user_Name_Login"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/salsa"
            android:padding="10dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#592D1D"
            android:textSize="18dp"
            android:translationX="25dp"
            android:translationY="3dp"
            app:layout_constraintBottom_toTopOf="@+id/PasswordText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.787" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/user_Password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/salsa"
            android:padding="10dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#592D1D"
            android:textSize="18dp"
            android:translationX="25dp"
            android:translationY="60dp"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PasswordText"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:backgroundTint="#7A8C51"
            android:onClick="login"
            android:text="Login"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ForgottenPassword"
            app:layout_constraintVertical_bias="0.778"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:backgroundTint="#7A8C51"
            android:onClick="login"
            android:text="Login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.828"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/Username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/salsa"
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:translationY="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.128"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/PasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="108dp"
            android:fontFamily="@font/salsa"
            android:text="Password"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:translationY="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.123"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Username_text" />

        <TextView
            android:id="@+id/ForgottenPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/salsa"
            android:text="I`ve forgotten my password"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:translationY="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.105"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forgotPassword"
            android:layout_width="147dp"
            android:layout_height="51dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="390sp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button"
            android:fontFamily="@font/salsa"
            android:text="Forgot password?"
            android:textColor="#FFE9C5"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.698" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nav_to_register"
            android:layout_width="147dp"
            android:layout_height="51dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="390sp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button"
            android:fontFamily="@font/salsa"
            android:text="Register"
            android:textColor="#FFE9C5"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.698" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/Textview_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/salsa"
        android:text="LOGIN"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:translationY="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>